# azure-connectors

./: .gitignore  DELETE_test_write_w_table.ipynb  README.md  pyproject.toml
azure-connectors/: __init__.py
azure-connectors/azure_sql/: __init__.py  connection.py  credential.py  settings.py
example_envs/: azure_blob.env  azure_datalake.env  azure_sql.env  azure_tables.env
src/azure_connectors/: __init__.py  constants.py  enums.py
src/azure_connectors/azure_blob/: __init__.py  api_clients.py  sdk_clients.py  settings.py
src/azure_connectors/azure_datalake/: sdk_clients.py  settings.py
src/azure_connectors/azure_sql/: __init__.py  api_clients.py  connection.py  constants.py  sdk_clients.py  settings.py
src/azure_connectors/azure_tables/: __init__.py  api_clients.py  connection.py  sdk_clients.py  settings.py
src/azure_connectors/client_factory/: __init__.py  client_factory.py  typing.py  utils.py
src/azure_connectors/config/: __init__.py  enums.py  env_file.py  settings_config.py
src/azure_connectors/credential/: __init__.py  adapter.py  credential.py  enums.py  settings.py  types.py  typing.py
src/azure_connectors/credentials/: __init__.py  credentials.py  enums.py  settings.py  types.py
src/azure_connectors/dataframe_io/: __init__.py  dataframe_io_config.py  insertion_methods.py  read.py  utils.py  write.py
tests/: conftest.py  test_azure_credentials.py  test_azure_sql.py  test_azure_sql_integration.py  test_azure_table_settings.py  test_credential_settings.py  test_sql_settings.py  test_table_settings.py  test_validators.py  utils.py
(+12 files in other folders)
